--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 *{
-    padding: 0;
-    margin: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+     padding: 0;
+     margin: 0;
+     -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+     box-sizing: border-box;
+ }
 ul,li{
     list-style: none;
 }
@@ -16,8 +16,8 @@ ul,li{
 }
 /***************************/
 #header_part1{
-    background: #333;
-    padding: 10px  0;
+/*    background: #333;
+    padding: 10px  0;*/
 }
 .nav .item{
     display: inline-block;
@@ -25,12 +25,9 @@ ul,li{
 }
 .nav .item .link{
     transition: all 0.3s ease;
-    display: block;
-    color: #b3b3b3;
+    color: #212121;
     font-size: 19px;
-    padding: 5px 6px;
-    text-decoration: none;
-    font-family: sans-serif;
+    /*font-family: sans-serif;*/
 }
 .nav .item .link:hover,
 .nav .item .link.active{
