--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,10 +31,9 @@ div.note {
 	height: 150px;
 	width: 150px;
 	background-color: yellow;
-	/*display: inline-block;*/
-	float: left;
+	display: inline-block;
 	margin: 15px;
-	position: relative;
+	position: absolute;
 	cursor: -webkit-grab;
 	-webkit-box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2);
 	box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2);
